// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetectorDescriptionList render for detector with anomaly values 1`] = `
<EuiDescriptionList
  className="rule-detector-description-list"
  columnWidths={
    Array [
      15,
      85,
    ]
  }
  listItems={
    Array [
      Object {
        "description": "responsetimes",
        "title": <Memo(MemoizedFormattedMessage)
          defaultMessage="Job ID"
          id="xpack.ml.ruleEditor.detectorDescriptionList.jobIdTitle"
        />,
      },
      Object {
        "description": "mean response time",
        "title": <Memo(MemoizedFormattedMessage)
          defaultMessage="Detector"
          id="xpack.ml.ruleEditor.detectorDescriptionList.detectorTitle"
        />,
      },
      Object {
        "description": <Memo(MemoizedFormattedMessage)
          defaultMessage="actual {actual}, typical {typical}"
          id="xpack.ml.ruleEditor.detectorDescriptionList.selectedAnomalyDescription"
          values={
            Object {
              "actual": 50,
              "typical": 1.23,
            }
          }
        />,
        "title": <Memo(MemoizedFormattedMessage)
          defaultMessage="Selected anomaly"
          id="xpack.ml.ruleEditor.detectorDescriptionList.selectedAnomalyTitle"
        />,
      },
    ]
  }
  type="column"
/>
`;

exports[`DetectorDescriptionList render for population detector with no anomaly values 1`] = `
<EuiDescriptionList
  className="rule-detector-description-list"
  columnWidths={
    Array [
      15,
      85,
    ]
  }
  listItems={
    Array [
      Object {
        "description": "population",
        "title": <Memo(MemoizedFormattedMessage)
          defaultMessage="Job ID"
          id="xpack.ml.ruleEditor.detectorDescriptionList.jobIdTitle"
        />,
      },
      Object {
        "description": "count by status over clientip",
        "title": <Memo(MemoizedFormattedMessage)
          defaultMessage="Detector"
          id="xpack.ml.ruleEditor.detectorDescriptionList.detectorTitle"
        />,
      },
    ]
  }
  type="column"
/>
`;
